--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,6 @@ picture {
   background-image: -webkit-linear-gradient(#990000, #000000);
   background-image: linear-gradient(#990000, #000000); }
   #container p {
-    color: #fff; }
+    color: #000; }
 
 /*# sourceMappingURL=main.css.map */
