--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,139 @@ picture {
   max-width: 100%; }
 
 /* my styles */
+.navigation {
+  position: fixed;
+  background-color: #000;
+  min-height: 52px;
+  width: 100%;
+  z-index: 999;
+  padding-right: 10%;
+  padding-left: 10%; }
+  .navigation a {
+    text-decoration: none;
+    color: #fff; }
+  .navigation .navigation-wrapper {
+    max-width: 68em;
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+    z-index: 9999;
+    text-align: left;
+    padding-left: 1;
+    float: left; }
+    .navigation .navigation-wrapper::after {
+      clear: both;
+      content: "";
+      display: table; }
+    .navigation .navigation-wrapper::after {
+      clear: both;
+      content: "";
+      display: table; }
+  .navigation nav {
+    float: none;
+    min-height: 52px;
+    z-index: 9999999; }
+    @media screen and (min-width: 53.75em) {
+      .navigation nav {
+        float: left; } }
+  .navigation .sliding-menu-content {
+    z-index: 999999;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    height: 100%;
+    width: 150px;
+    -webkit-transform: translateX(-220px);
+    -moz-transform: translateX(-220px);
+    -ms-transform: translateX(-220px);
+    -o-transform: translateX(-220px);
+    transform: translateX(-220px);
+    -webkit-transition: all 0.25s linear;
+    -moz-transition: all 0.25s linear;
+    transition: all 0.25s linear;
+    background-color: #000;
+    background-image: -webkit-linear-gradient(left, #000 95%, #3498db 5%);
+    background-image: linear-gradient(to right,#000 95%, #3498db 5%); }
+    .navigation .sliding-menu-content ul {
+      padding: 0;
+      margin: 0; }
+      .navigation .sliding-menu-content ul li {
+        list-style: none; }
+    .navigation .sliding-menu-content li a {
+      color: #fff;
+      display: block;
+      font-weight: bold;
+      padding: 1em;
+      height: 53px;
+      text-decoration: none; }
+      .navigation .sliding-menu-content li a:focus {
+        background-color: #000; }
+      .navigation .sliding-menu-content li a:hover {
+        background-color: #000;
+        background-image: -webkit-linear-gradient(left, #000, #3498db);
+        background-image: linear-gradient(to right,#000, #3498db);
+        color: white; }
+    .navigation .sliding-menu-content.is-visible {
+      -webkit-transform: translateX(0);
+      -moz-transform: translateX(0);
+      -ms-transform: translateX(0);
+      -o-transform: translateX(0);
+      transform: translateX(0); }
+  .navigation .sliding-menu-button {
+    border: 1px solid #00298a;
+    border-bottom: 1px solid #001961;
+    border-radius: 5px;
+    box-shadow: inset 0 1px 0 0 #59b5e7;
+    color: white;
+    display: inline-block;
+    font-size: inherit;
+    font-weight: bold;
+    background-color: #3498db;
+    background-image: -webkit-linear-gradient(top, #3498db 0%, #0066ba 50%, #004dab 50%, #0052ad 100%);
+    background-image: linear-gradient(to bottom,#3498db 0%, #0066ba 50%, #004dab 50%, #0052ad 100%);
+    padding: 7px 18px;
+    text-align: center;
+    text-decoration: none;
+    text-shadow: 0 -1px 1px #000b69;
+    height: 40px;
+    margin-top: 7px;
+    float: left;
+    color: #fff;
+    margin-left: 10px; }
+    .navigation .sliding-menu-button:hover:not(:disabled) {
+      cursor: pointer;
+      background-color: #2789c9;
+      background-image: -webkit-linear-gradient(top, #2789c9 0%, #005aa8 50%, #004399 50%, #00489c 100%);
+      background-image: linear-gradient(to bottom,#2789c9 0%, #005aa8 50%, #004399 50%, #00489c 100%); }
+    .navigation .sliding-menu-button:active:not(:disabled), .navigation .sliding-menu-button:focus:not(:disabled) {
+      box-shadow: inset 0 0 20px 0 #002461; }
+    .navigation .sliding-menu-button:disabled {
+      opacity: 0.5;
+      cursor: not-allowed; }
+  .navigation .signin-btn {
+    float: right;
+    font-weight: bold;
+    line-height: 52px; }
+    .navigation .signin-btn a {
+      color: #3498db;
+      border: 1px solid #3498db;
+      padding: 5px 15px 8px 15px;
+      border-radius: 5px; }
+      .navigation .signin-btn a:hover {
+        -webkit-transition: all 1.5s ease-in-out;
+        -moz-transition: all 1.5s ease-in-out;
+        transition: all 1.5s ease-in-out;
+        background-color: #3498db;
+        color: white; }
+  @media screen and (max-width: 769px) {
+    .navigation {
+      padding-left: 0;
+      padding-right: 2%; } }
+
 header {
   background-image: url("../images/login-background.jpg");
   height: 100vh;
@@ -207,164 +340,40 @@ header {
   background-repeat: none;
   background-position: center 35%;
   text-align: center; }
-  header #slidr-div {
-    display: inline-block;
-    font-weight: bold;
-    line-height: 0.8;
-    float: right; }
-    header #slidr-div .box {
-      background-color: #f39c12;
-      color: white;
-      min-height: 40px;
-      line-height: 40px;
-      min-width: 260px;
-      text-align: center;
-      width: 100%;
-      padding-left: 10px;
-      margin-top: 5px;
-      border-radius: 3px; }
-      header #slidr-div .box img {
-        margin: 5px 10px 0 5px; }
-  header .navigation {
-    position: fixed;
-    background-color: #000;
-    border-bottom: 1px solid black;
-    min-height: 52px;
+  header .ticker {
+    background-color: #f39c12;
+    height: 25px;
+    top: 52px;
+    position: absolute;
     width: 100%;
-    z-index: 999; }
-    header .navigation a {
-      text-decoration: none;
-      color: #fff; }
-    header .navigation .navigation-wrapper {
-      max-width: 68em;
-      margin-left: auto;
-      margin-right: auto;
-      position: relative;
-      z-index: 9999;
-      text-align: left;
-      padding-left: 1; }
-      header .navigation .navigation-wrapper::after {
-        clear: both;
-        content: "";
-        display: table; }
-      header .navigation .navigation-wrapper::after {
-        clear: both;
-        content: "";
-        display: table; }
-    header .navigation nav {
-      float: none;
-      min-height: 52px;
-      z-index: 9999999; }
-      @media screen and (min-width: 53.75em) {
-        header .navigation nav {
-          float: left; } }
-    header .navigation .navigation-tools {
-      background: #000;
-      clear: both;
-      display: block;
-      height: 52px;
-      padding-left: 0.5em;
-      padding-right: 1em; }
-      @media screen and (min-width: 53.75em) {
-        header .navigation .navigation-tools {
-          background: transparent;
-          clear: none;
-          float: right; } }
-    header .navigation .sliding-menu-content {
-      position: fixed;
-      top: 0px;
-      right: 0px;
-      bottom: 0px;
-      left: 0px;
-      height: 100%;
-      width: 150px;
-      -webkit-transform: translateX(-220px);
-      -moz-transform: translateX(-220px);
-      -ms-transform: translateX(-220px);
-      -o-transform: translateX(-220px);
-      transform: translateX(-220px);
-      -webkit-transition: all 0.25s linear;
-      -moz-transition: all 0.25s linear;
-      transition: all 0.25s linear;
-      background-color: #000;
-      background-image: -webkit-linear-gradient(left, #000 95%, #3498db 5%);
-      background-image: linear-gradient(to right,#000 95%, #3498db 5%);
-      z-index: 999999;
-      overflow-y: auto;
-      -webkit-overflow-scrolling: touch; }
-      header .navigation .sliding-menu-content ul {
-        padding: 0;
-        margin: 0; }
-      header .navigation .sliding-menu-content li {
-        list-style: none; }
-      header .navigation .sliding-menu-content a {
-        text-decoration: none; }
-      header .navigation .sliding-menu-content li a {
-        color: #fff;
-        display: block;
-        font-weight: bold;
-        padding: 1em;
-        height: 53px; }
-        header .navigation .sliding-menu-content li a:focus {
-          background-color: #000; }
-        header .navigation .sliding-menu-content li a:hover {
-          background-color: #000;
-          background-image: -webkit-linear-gradient(left, #000, #3498db);
-          background-image: linear-gradient(to right,#000, #3498db);
-          color: white; }
-      header .navigation .sliding-menu-content.is-visible {
-        -webkit-transform: translateX(0);
-        -moz-transform: translateX(0);
-        -ms-transform: translateX(0);
-        -o-transform: translateX(0);
-        transform: translateX(0); }
-    header .navigation button {
-      border: 1px solid #00298a;
-      border-bottom: 1px solid #001961;
-      border-radius: 5px;
-      box-shadow: inset 0 1px 0 0 #59b5e7;
-      color: white;
-      display: inline-block;
-      font-size: inherit;
-      font-weight: bold;
-      background-color: #3498db;
-      background-image: -webkit-linear-gradient(top, #3498db 0%, #0066ba 50%, #004dab 50%, #0052ad 100%);
-      background-image: linear-gradient(to bottom,#3498db 0%, #0066ba 50%, #004dab 50%, #0052ad 100%);
-      padding: 7px 18px;
-      text-align: center;
-      text-decoration: none;
-      text-shadow: 0 -1px 1px #000b69;
-      height: 40px;
-      margin-top: 7px;
-      float: left;
-      color: #fff !important;
-      margin-left: 10px; }
-      header .navigation button:hover:not(:disabled) {
-        cursor: pointer;
-        background-color: #2789c9;
-        background-image: -webkit-linear-gradient(top, #2789c9 0%, #005aa8 50%, #004399 50%, #00489c 100%);
-        background-image: linear-gradient(to bottom,#2789c9 0%, #005aa8 50%, #004399 50%, #00489c 100%); }
-      header .navigation button:active:not(:disabled), header .navigation button:focus:not(:disabled) {
-        box-shadow: inset 0 0 20px 0 #002461; }
-      header .navigation button:disabled {
-        opacity: 0.5;
-        cursor: not-allowed; }
+    color: #000;
+    font-weight: bold; }
   header #logo {
-    min-height: 250px;
+    min-height: 200px;
     width: 50%;
     margin: auto;
     text-align: center;
-    padding-top: 175px; }
+    padding-top: 125px;
+    padding-bottom: 10px; }
     @media screen and (max-width: 769px) {
       header #logo {
-        width: 90%; } }
+        width: 90%;
+        padding-bottom: -100px !important; } }
     header #logo img {
       width: 80%; }
-  header p {
+  header p.tagline {
     font-size: 2em;
     color: #fff;
-    text-align: center; }
-  header button {
+    text-align: center;
+    padding-bottom: 20px; }
+    @media screen and (max-width: 769px) {
+      header p.tagline {
+        width: 80%;
+        margin: auto;
+        margin-bottom: 20px;
+        font-size: 1.5em;
+        text-align: left; } }
+  header .signup-btn {
     border: 1px solid #7e2d00;
     border-bottom: 1px solid #751d00;
     border-radius: 5px;
@@ -380,18 +389,19 @@ header {
     text-align: center;
     text-decoration: none;
     text-shadow: 0 -1px 1px #ffa71a;
-    color: white; }
-    header button:hover:not(:disabled) {
+    color: white;
+    font-size: 1.5em; }
+    header .signup-btn:hover:not(:disabled) {
       cursor: pointer;
       background-color: #e68d00;
       background-image: -webkit-linear-gradient(top, #e68d00 0%, #b15e00 50%, #964700 50%, #9d4c00 100%);
       background-image: linear-gradient(to bottom,#e68d00 0%, #b15e00 50%, #964700 50%, #9d4c00 100%); }
-    header button:active:not(:disabled), header button:focus:not(:disabled) {
+    header .signup-btn:active:not(:disabled), header .signup-btn:focus:not(:disabled) {
       box-shadow: inset 0 0 20px 0 #842800; }
-    header button:disabled {
+    header .signup-btn:disabled {
       opacity: 0.5;
       cursor: not-allowed; }
-  header .dropdown {
-    padding-top: 140px; }
+  header .dropdown-arrow {
+    padding-top: 75px; }
 
 /*# sourceMappingURL=main.css.map */
