--- a/css/main.css
+++ b/css/main.css
@@ -348,6 +348,10 @@ header {
     width: 100%;
     color: #000;
     font-weight: bold; }
+    @media screen and (max-width: 769px) {
+      header .ticker {
+        font-size: 0.6em;
+        line-height: 20px; } }
   header #logo {
     min-height: 200px;
     width: 50%;
