--- a/css/styles/header.scss
+++ b/css/styles/header.scss
@@ -17,6 +17,11 @@ header {
     width: 100%;
     color: #000;
     font-weight: bold;
+
+    @include media(max-width 769px) {
+      font-size: 0.6em;
+      line-height: 20px;
+    }
   }
 
   #logo {
