--- a/css/styles/nav.scss
+++ b/css/styles/nav.scss
@@ -15,8 +15,8 @@
   min-height: $navigation-height;
   width: 100%;
   z-index: 999;
-  padding-right: 10%;
-  padding-left: 10%;
+  padding-right: 11%;
+  padding-left: 11%;
   
   a {
     text-decoration: none;
@@ -62,6 +62,7 @@
     font-weight: bold;
     padding: 1em;
     height: 53px;
+    font-size: 0.9em;
     text-decoration: none;
 
     &:focus {
