add sign in modal

--- a/css/base/_forms.scss
+++ b/css/base/_forms.scss
@@ -1,4 +1,4 @@
-fieldset {
+/*fieldset {
   background-color: lighten($base-border-color, 10%);
   border: $base-border;
   margin: 0 0 $small-spacing;
@@ -75,4 +75,4 @@ select {
   margin-bottom: $base-spacing;
   max-width: 100%;
   width: auto;
-}
+}*/
