--- a/css/main.css
+++ b/css/main.css
@@ -33,84 +33,75 @@ button {
     cursor: not-allowed;
     opacity: 0.5; }
 
-/*fieldset {
-  background-color: lighten($base-border-color, 10%);
-  border: $base-border;
-  margin: 0 0 $small-spacing;
-  padding: $base-spacing;
-}
+fieldset {
+  background-color: #f7f7f7;
+  border: 1px solid #ddd;
+  margin: 0 0 0.75em;
+  padding: 1.5em; }
 
 input,
 label,
 select {
   display: block;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
-}
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 1em; }
 
 label {
-  font-weight: 600;
-  margin-bottom: $small-spacing / 2;
-
-  &.required::after {
-    content: "*";
-  }
-
-  abbr {
-    display: none;
-  }
-}
+  font-weight: 600; }
+  label.required::after {
+    content: "*"; }
+  label abbr {
+    display: none; }
 
 input[type="email"], input[type="number"], input[type="password"], input[type="search"], input[type="tel"], input[type="text"], input[type="url"], input[type="color"], input[type="date"], input[type="datetime"], input[type="datetime-local"], input[type="month"], input[type="time"], input[type="week"],
 select[multiple=multiple],
 textarea {
-  background-color: $base-background-color;
-  border: $base-border;
-  border-radius: $base-border-radius;
-  box-shadow: $form-box-shadow;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06);
   box-sizing: border-box;
-  font-family: $base-font-family;
-  font-size: $base-font-size;
-  margin-bottom: $base-spacing / 2;
-  padding: $base-spacing / 3;
+  font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  font-size: 1em;
+  margin-bottom: 0.75em;
+  padding: 0.5em;
   transition: border-color;
-  width: 100%;
-
-  &:hover {
-    border-color: darken($base-border-color, 10%);
-  }
-
-  &:focus {
-    border-color: $action-color;
-    box-shadow: $form-box-shadow-focus;
-    outline: none;
-  }
-}
+  width: 100%; }
+  input[type="email"]:hover, input[type="number"]:hover, input[type="password"]:hover, input[type="search"]:hover, input[type="tel"]:hover, input[type="text"]:hover, input[type="url"]:hover, input[type="color"]:hover, input[type="date"]:hover, input[type="datetime"]:hover, input[type="datetime-local"]:hover, input[type="month"]:hover, input[type="time"]:hover, input[type="week"]:hover,
+  select[multiple=multiple]:hover,
+  textarea:hover {
+    border-color: #c4c4c4; }
+  input[type="email"]:focus, input[type="number"]:focus, input[type="password"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="text"]:focus, input[type="url"]:focus, input[type="color"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="time"]:focus, input[type="week"]:focus,
+  select[multiple=multiple]:focus,
+  textarea:focus {
+    border-color: #477dca;
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.06), 0 0 5px rgba(55, 112, 192, 0.7);
+    outline: none; }
 
 textarea {
-  resize: vertical;
-}
+  resize: vertical; }
 
 input[type="search"] {
-  @include appearance(none);
-}
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none; }
 
 input[type="checkbox"],
 input[type="radio"] {
   display: inline;
-  margin-right: $small-spacing / 2;
-}
+  margin-right: 0.375em; }
 
 input[type="file"] {
-  padding-bottom: $small-spacing;
-  width: 100%;
-}
+  padding-bottom: 0.75em;
+  width: 100%; }
 
 select {
-  margin-bottom: $base-spacing;
+  margin-bottom: 1.5em;
   max-width: 100%;
-  width: auto;
-}*/
+  width: auto; }
+
 ul,
 ol {
   list-style-type: none;
@@ -207,7 +198,116 @@ html {
 
 /* my styles */
 section {
-  height: 600px; }
+  height: 400px;
+  padding: 2em; }
+
+.container {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto; }
+  .container::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+.clear {
+  clear: both; }
+
+#sub-soln {
+  display: block;
+  background-color: #3498db;
+  background-image: -webkit-linear-gradient(bottom, #3498db, #000);
+  background-image: linear-gradient(to top,#3498db, #000);
+  background-color: #000;
+  color: white;
+  clear: both; }
+  #sub-soln::after {
+    clear: both;
+    content: "";
+    display: table; }
+  #sub-soln .soln-info {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 40.29137%; }
+    #sub-soln .soln-info h1 {
+      font-size: 2.7em; }
+    #sub-soln .soln-info p {
+      font-size: 1.7em; }
+    #sub-soln .soln-info:last-child {
+      margin-right: 0; }
+    @media screen and (max-width: 420px) {
+      #sub-soln .soln-info {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 100%;
+        margin-left: 0%;
+        max-width: 100%;
+        margin-left: auto;
+        margin-right: auto; }
+        #sub-soln .soln-info:last-child {
+          margin-right: 0; }
+        #sub-soln .soln-info::after {
+          clear: both;
+          content: "";
+          display: table; } }
+  #sub-soln .soln-img {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 40.29137%; }
+    #sub-soln .soln-img:last-child {
+      margin-right: 0; }
+    @media screen and (max-width: 420px) {
+      #sub-soln .soln-img {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 100%; }
+        #sub-soln .soln-img:last-child {
+          margin-right: 0; } }
+
+#findgame {
+  display: block;
+  background-color: #fff;
+  background-image: -webkit-linear-gradient(bottom, #fff, #3498db);
+  background-image: linear-gradient(to top,#fff, #3498db); }
+  #findgame::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+#findsub {
+  display: block;
+  background-color: #3498db;
+  background-image: -webkit-linear-gradient(bottom, #3498db, #fff);
+  background-image: linear-gradient(to top,#3498db, #fff); }
+  #findsub::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+#leagues {
+  background-color: #000;
+  background-image: -webkit-linear-gradient(bottom, #000, #3498db);
+  background-image: linear-gradient(to top,#000, #3498db); }
+  #leagues h1 {
+    text-align: center;
+    color: white; }
+
+.testimonials {
+  background-color: white;
+  height: 200px;
+  text-align: center; }
+  .testimonials .quote {
+    margin: auto;
+    width: 100%;
+    font-size: 1.5em; }
+
+footer {
+  height: 300px;
+  background-color: #000; }
 
 .navigation {
   position: fixed;
@@ -266,10 +366,12 @@ section {
     background-color: #000;
     background-image: -webkit-linear-gradient(left, #000 95%, #3498db 5%);
     background-image: linear-gradient(to right,#000 95%, #3498db 5%); }
-    .navigation .sliding-menu-content ul {
+    .navigation .sliding-menu-content linear
+    ul {
       padding: 0;
       margin: 0; }
-      .navigation .sliding-menu-content ul li {
+      .navigation .sliding-menu-content linear
+      ul li {
         list-style: none; }
     .navigation .sliding-menu-content li a {
       color: #fff;
@@ -344,13 +446,16 @@ section {
       padding-left: 0;
       padding-right: 2%; } }
 
+body {
+  background-color: #000; }
+
 header {
   background-image: url("../images/login-background.jpg");
   height: 100vh;
   max-height: 800px;
   width: 100%;
   background-size: cover;
-  background-repeat: none;
+  background-repeat: no-repeat;
   background-position: center 35%;
   text-align: center; }
   header .ticker {
@@ -422,7 +527,7 @@ header {
     padding-top: 75px; }
 
 .modal-state {
-  display: none; }
+  display: none !important; }
 
 .modal .modal-window {
   -webkit-transition: opacity 0.25s ease;
@@ -528,5 +633,95 @@ header {
 
 .modal-closed {
   overflow: auto; }
+
+.cards {
+  max-width: 68em;
+  margin-left: auto;
+  margin-right: auto;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-lines: multiple;
+  -moz-box-lines: multiple;
+  box-lines: multiple;
+  -webkit-flex-wrap: wrap;
+  -moz-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  box-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  -ms-justify-content: space-between;
+  -o-justify-content: space-between;
+  justify-content: space-between;
+  -ms-flex-pack: justify; }
+  .cards::after {
+    clear: both;
+    content: "";
+    display: table; }
+
+.card {
+  -webkit-flex-basis: 15em;
+  -moz-flex-basis: 15em;
+  flex-basis: 15em;
+  -ms-flex-preferred-size: 15em;
+  -webkit-flex-grow: 1;
+  -moz-flex-grow: 1;
+  flex-grow: 1;
+  -ms-flex-positive: 1;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  background-color: #f7f7f7;
+  border-radius: 3px;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 4px #e6e6e6;
+  cursor: pointer;
+  margin: 0 1em 1.5em 1em;
+  position: relative;
+  position: relative; }
+  .card .card-image {
+    overflow: hidden;
+    max-height: 200px; }
+    .card .card-image img {
+      -webkit-transition: all 0.2s ease-in-out;
+      -moz-transition: all 0.2s ease-in-out;
+      transition: all 0.2s ease-in-out;
+      background: #DBD199;
+      border-top-left-radius: 3px;
+      border-top-right-radius: 3px;
+      width: 100%; }
+  .card .card-header {
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    background-color: #f7f7f7;
+    border-bottom: 1px solid #ddd;
+    border-radius: 3px 3px 0 0;
+    font-weight: bold;
+    line-height: 1.5em;
+    padding: 0.5em 0.75em; }
+  .card .card-copy {
+    font-size: 0.9em;
+    line-height: 1.5em;
+    padding: 0.75em 0.75em; }
+    .card .card-copy p {
+      margin: 0 0 0.75em; }
+  .card:focus, .card:hover {
+    background-color: white; }
+    .card:focus .card-image img, .card:hover .card-image img {
+      background: #e2daac; }
+    .card:focus .card-header, .card:hover .card-header {
+      background-color: white; }
+  .card:active {
+    background-color: #f7f7f7; }
+    .card:active .card-header {
+      background-color: #f7f7f7; }
 
 /*# sourceMappingURL=main.css.map */
