--- a/css/main.css
+++ b/css/main.css
@@ -198,8 +198,9 @@ html {
 
 /* my styles */
 section {
-  height: 400px;
-  padding: 2em; }
+  height: 500px;
+  padding: 2em;
+  padding-top: 6em; }
 
 .container {
   max-width: 68em;
@@ -212,6 +213,9 @@ section {
 
 .clear {
   clear: both; }
+
+.content {
+  background-color: white; }
 
 #sub-soln {
   display: block;
@@ -258,7 +262,8 @@ section {
     margin-right: 2.35765%;
     width: 48.82117%;
     background-image: url("../images/ven.png");
-    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
     height: 350px; }
     #sub-soln .soln-img:last-child {
       margin-right: 0; }
@@ -290,6 +295,48 @@ section {
     clear: both;
     content: "";
     display: table; }
+  #findsub .sub-info {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%; }
+    #findsub .sub-info h1 {
+      font-size: 2.7em; }
+    #findsub .sub-info p {
+      font-size: 1.7em; }
+    #findsub .sub-info:last-child {
+      margin-right: 0; }
+    @media screen and (max-width: 420px) {
+      #findsub .sub-info {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 100%;
+        margin-left: 0%;
+        max-width: 100%;
+        margin-left: auto;
+        margin-right: auto; }
+        #findsub .sub-info:last-child {
+          margin-right: 0; }
+        #findsub .sub-info::after {
+          clear: both;
+          content: "";
+          display: table; } }
+  #findsub .sub-finder {
+    float: left;
+    display: block;
+    margin-right: 2.35765%;
+    width: 48.82117%; }
+    #findsub .sub-finder:last-child {
+      margin-right: 0; }
+    @media screen and (max-width: 420px) {
+      #findsub .sub-finder {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 100%; }
+        #findsub .sub-finder:last-child {
+          margin-right: 0; } }
 
 #leagues {
   background-color: #000;
@@ -301,8 +348,9 @@ section {
 
 .testimonials {
   background-color: white;
-  height: 200px;
-  text-align: center; }
+  height: 150px;
+  text-align: center;
+  padding-top: 2em; }
   .testimonials .quote {
     margin: auto;
     width: 100%;
@@ -689,7 +737,7 @@ header {
   background-color: #f7f7f7;
   border-radius: 3px;
   border: 1px solid #ddd;
-  box-shadow: 0 2px 4px #e6e6e6;
+  box-shadow: 0 2px 4px #217dbb;
   cursor: pointer;
   margin: 0 1em 1.5em 1em;
   position: relative;
