--- a/css/styles/cards.scss
+++ b/css/styles/cards.scss
@@ -8,7 +8,7 @@
 .card {
   $base-border-color: gainsboro !default;
   $base-border-radius: 3px !default;
-  $base-background-color: white !default;
+  $base-background-color: #3498db;
   $base-spacing: 1.5em !default;
   $base-accent-color: #477DCA !default;
   $base-link-color: $base-accent-color !default;
