--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,8 @@ html {
 
 /* my styles */
 body {
-  font-family: 'Muli', sans-serif; }
+  font-family: 'Muli', sans-serif;
+  background-color: #013e66; }
 
 section {
   height: 500px;
@@ -223,9 +224,9 @@ section {
 #sub-soln {
   display: block;
   background-color: #3498db;
-  background-image: -webkit-linear-gradient(bottom, #3498db, #000);
-  background-image: linear-gradient(to top,#3498db, #000);
-  background-color: #000;
+  background-image: -webkit-linear-gradient(bottom, #3498db, #013e66);
+  background-image: linear-gradient(to top,#3498db, #013e66);
+  background-color: #013e66;
   color: white;
   clear: both; }
   #sub-soln::after {
@@ -342,9 +343,9 @@ section {
           margin-right: 0; } }
 
 #leagues {
-  background-color: #000;
-  background-image: -webkit-linear-gradient(bottom, #000, #3498db);
-  background-image: linear-gradient(to top,#000, #3498db);
+  background-color: #013e66;
+  background-image: -webkit-linear-gradient(bottom, #013e66, #3498db);
+  background-image: linear-gradient(to top,#013e66, #3498db);
   text-align: center; }
   #leagues h1 {
     color: white; }
@@ -365,11 +366,11 @@ section {
 
 footer {
   height: 300px;
-  background-color: #000; }
+  background-color: #013e66; }
 
 .navigation {
   position: fixed;
-  background-color: #000;
+  background-color: #013e66;
   min-height: 52px;
   width: 100%;
   z-index: 999;
@@ -406,6 +407,7 @@ footer {
     z-index: 999999;
     overflow-y: auto;
     -webkit-overflow-scrolling: touch;
+    background-color: #013e66;
     position: fixed;
     top: 0px;
     right: 0px;
@@ -424,12 +426,10 @@ footer {
     background-color: #000;
     background-image: -webkit-linear-gradient(left, #000 95%, #3498db 5%);
     background-image: linear-gradient(to right,#000 95%, #3498db 5%); }
-    .navigation .sliding-menu-content linear
-    ul {
+    .navigation .sliding-menu-content ul {
       padding: 0;
       margin: 0; }
-      .navigation .sliding-menu-content linear
-      ul li {
+      .navigation .sliding-menu-content ul li {
         list-style: none; }
     .navigation .sliding-menu-content li a {
       color: #fff;
@@ -453,43 +453,21 @@ footer {
       -o-transform: translateX(0);
       transform: translateX(0); }
   .navigation .sliding-menu-button {
-    border: 1px solid #00298a;
-    border-bottom: 1px solid #001961;
-    border-radius: 5px;
-    box-shadow: inset 0 1px 0 0 #59b5e7;
-    color: white;
-    display: inline-block;
-    font-size: inherit;
-    font-weight: bold;
-    background-color: #3498db;
-    background-image: -webkit-linear-gradient(top, #3498db 0%, #0066ba 50%, #004dab 50%, #0052ad 100%);
-    background-image: linear-gradient(to bottom,#3498db 0%, #0066ba 50%, #004dab 50%, #0052ad 100%);
-    padding: 7px 18px;
-    text-align: center;
-    text-decoration: none;
-    text-shadow: 0 -1px 1px #000b69;
     height: 40px;
-    margin-top: 7px;
+    margin-top: 5px;
     float: left;
-    color: #fff;
-    margin-left: 10px; }
-    .navigation .sliding-menu-button:hover:not(:disabled) {
-      cursor: pointer;
-      background-color: #2789c9;
-      background-image: -webkit-linear-gradient(top, #2789c9 0%, #005aa8 50%, #004399 50%, #00489c 100%);
-      background-image: linear-gradient(to bottom,#2789c9 0%, #005aa8 50%, #004399 50%, #00489c 100%); }
-    .navigation .sliding-menu-button:active:not(:disabled), .navigation .sliding-menu-button:focus:not(:disabled) {
-      box-shadow: inset 0 0 20px 0 #002461; }
-    .navigation .sliding-menu-button:disabled {
-      opacity: 0.5;
-      cursor: not-allowed; }
+    color: #3498db;
+    margin-left: 10px;
+    border: 1px solid #fff;
+    padding: 8px 15px 2px 15px;
+    border-radius: 5px; }
   .navigation .signin-btn {
     float: right;
     font-weight: bold;
     line-height: 52px; }
     .navigation .signin-btn .modal-trigger {
-      color: #3498db;
-      border: 1px solid #3498db;
+      color: #fff;
+      border: 1px solid #fff;
       padding: 5px 15px 8px 15px;
       border-radius: 5px;
       cursor: pointer; }
@@ -504,11 +482,8 @@ footer {
       padding-left: 0;
       padding-right: 2%; } }
 
-body {
-  background-color: #000; }
-
 header {
-  background-image: url("../images/login-background.jpg");
+  background-image: url("../images/hero-img.png;");
   height: 100vh;
   max-height: 800px;
   width: 100%;
@@ -799,15 +774,15 @@ header {
   position: relative; }
   .card .card-image {
     overflow: hidden;
-    max-height: 200px; }
+    max-height: 200px;
+    text-align: center; }
     .card .card-image img {
       -webkit-transition: all 0.2s ease-in-out;
       -moz-transition: all 0.2s ease-in-out;
       transition: all 0.2s ease-in-out;
-      background: #DBD199;
+      background: #fff;
       border-top-left-radius: 3px;
-      border-top-right-radius: 3px;
-      width: 100%; }
+      border-top-right-radius: 3px; }
   .card .card-header {
     -webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
@@ -825,11 +800,14 @@ header {
     .card .card-copy p {
       margin: 0 0 0.75em; }
   .card:focus, .card:hover {
-    background-color: white; }
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+    background-color: #3498db; }
     .card:focus .card-image img, .card:hover .card-image img {
-      background: #e2daac; }
+      background: #3498db; }
     .card:focus .card-header, .card:hover .card-header {
-      background-color: white; }
+      background-color: #3498db; }
   .card:active {
     background-color: #f7f7f7; }
     .card:active .card-header {
