--- a/css/styles/header.scss
+++ b/css/styles/header.scss
@@ -1,10 +1,7 @@
-body {
-  background-color: #000;
-}
 
 header {
   $orange: #f39c12;
-  background-image: url('../images/login-background.jpg');
+  background-image: url('../images/hero-img.png;');
   height: 100vh;
   max-height: 800px;
   width: 100%;
