--- a/css/main.scss
+++ b/css/main.scss
@@ -11,4 +11,5 @@
 @import 'styles/nav';
 @import 'styles/header';
 @import 'styles/modal';
-@import 'styles/cards'
+@import 'styles/cards';
+@import 'styles/grid';
