--- a/css/main.css
+++ b/css/main.css
@@ -448,6 +448,12 @@ footer {
     border: 1px solid #fff;
     padding: 8px 15px 2px 15px;
     border-radius: 5px; }
+    .navigation .sliding-menu-button:hover {
+      -webkit-transition: all 1s ease-in-out;
+      -moz-transition: all 1s ease-in-out;
+      transition: all 1s ease-in-out;
+      background-color: #3498db;
+      color: white; }
   .navigation .signin-btn {
     float: right;
     font-weight: bold;
@@ -459,9 +465,9 @@ footer {
       border-radius: 5px;
       cursor: pointer; }
       .navigation .signin-btn .modal-trigger:hover {
-        -webkit-transition: all 1.5s ease-in-out;
-        -moz-transition: all 1.5s ease-in-out;
-        transition: all 1.5s ease-in-out;
+        -webkit-transition: all 1s ease-in-out;
+        -moz-transition: all 1s ease-in-out;
+        transition: all 1s ease-in-out;
         background-color: #3498db;
         color: white; }
   @media screen and (max-width: 769px) {
@@ -862,5 +868,74 @@ header {
     position: absolute;
     right: 0px;
     width: 4px; }
+
+.footer {
+  background: #013e66;
+  padding: 3em 1.618em;
+  width: 100%; }
+  .footer ul {
+    padding: 0; }
+  .footer li {
+    list-style: none;
+    line-height: 1.5em; }
+  .footer a {
+    text-decoration: none; }
+  .footer .footer-logo {
+    margin-bottom: 3em;
+    text-align: center; }
+    .footer .footer-logo img {
+      height: 3em; }
+  .footer .footer-links {
+    margin-bottom: 1.5em; }
+    .footer .footer-links::after {
+      clear: both;
+      content: "";
+      display: table; }
+    @media screen and (min-width: 40em) {
+      .footer .footer-links {
+        margin-left: 25.58941%; } }
+  .footer ul {
+    margin-bottom: 3em; }
+    @media screen and (min-width: 40em) {
+      .footer ul {
+        float: left;
+        display: block;
+        margin-right: 2.35765%;
+        width: 23.23176%; }
+        .footer ul:last-child {
+          margin-right: 0; }
+        .footer ul:nth-child(3n) {
+          margin-right: 0; }
+        .footer ul:nth-child(3n+1) {
+          clear: left; }
+        .footer ul::after {
+          clear: both;
+          content: "";
+          display: table; } }
+  .footer li {
+    text-align: center; }
+    @media screen and (min-width: 40em) {
+      .footer li {
+        text-align: left; } }
+  .footer li a {
+    color: rgba(255, 255, 255, 0.4); }
+    .footer li a:focus, .footer li a:hover {
+      color: white; }
+  .footer li h3 {
+    color: white;
+    font-size: 1em;
+    font-weight: 800;
+    margin-bottom: 0.4em; }
+  .footer hr {
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    margin: 0 auto 1.5em;
+    width: 12em; }
+  .footer p {
+    color: rgba(255, 255, 255, 0.4);
+    font-size: 0.9em;
+    line-height: 1.5em;
+    margin: auto;
+    max-width: 35em;
+    text-align: center; }
 
 /*# sourceMappingURL=main.css.map */
